[package]
name = "rust-audio-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_log",
  "bevy_ui_picking_backend",
  "configurable_error_handler",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "wayland",
] }
firewheel = { version = "0.4.3", features = ["sampler_pool", "all_nodes"] }
symphonium = "0.5"
rodio = "0.20.1"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.8"
walkdir = "2.5.0"

[profile.dev.package."*"]
opt-level = 3

# For profiling purposes
[profile.release]
debug = true
