[package]
name = "rust-audio-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gltf",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_log",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "configurable_error_handler",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
  "wayland",
] }
firewheel = { version = "0.4.3", features = ["sampler_pool", "all_nodes"] }
symphonium = "0.5"
rodio = "0.20.1"
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.8"
walkdir = "2.5.0"
bevy_pretty_text = { git = "https://github.com/void-scape/bevy_pretty_text", commit = "32f474abda6773427c60e1d22b4c26bef1ddbd35" }
bevy_sequence = { git = "https://github.com/CorvusPrudens/bevy_sequence.git", commit = "c484472f940176762b5967d0794e1aa9b5c8c9eb" }
bevy_framepace = "0.19.1"

[profile.dev.package."*"]
opt-level = 3

# For profiling purposes
[profile.release]
debug = true
